<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Tab</string>
	<string name="search">Search</string>
	<string name="result">Result</string>
	<string name="history">History</string>
	<string name="city">City</string>
	<string name="district">District</string>
	<string name="select_district">Select district</string>
	<string name="select_feature">Select feature</string>
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
	<string name="all">Все</string>
	<string name="quantity_room">К-во Комнат</string>
	<string name="quantity_beds">К-во Спалн. мест</string>
	<string name="tRS">Диапозон цен,</string>
	<string name="tRSfrom">от</string>
	<string name="tRSto">до</string>
	<string name="feature">Удобства</string>
	<string name="center">В центре</string>
	<string name="hasnt_connect">Нет соединение с сетью</string>
	<string name="server_problem__connect">Сервер не отвечает</string>
	<string name="json_parser_problem">Неправильный ответ от сервера (json)</string>
	<string name="json_bad_strucure">Не могу распарсить</string>
	<string name="json_bad_strucure2">Ошибка в структуре джсон</string>
	<string name="feature_list_empty">Пустой feature_list</string>
	<string name="empty">Пусто</string>
	<string name="unknow">Неизвестно</string>
	<string name="json_bad_strucure3">Не хватает даных из джсона</string>
	<string name="pull_to_refresh_pull_label">Pull to refresh...</string>
	<string name="pull_to_refresh_release_label">Release to refresh...</string>
	<string name="pull_to_refresh_refreshing_label">Loading...</string>
	<string name="pull_to_refresh_tap_label">Tap to refresh...</string>
</resources>
